[package]
name = "polytype"
version = "6.1.1"
authors = ["Lucas Morales <lucas@lucasem.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/lucasem/polytype-rs"
homepage = "https://github.com/lucasem/polytype-rs"
documentation = "https://docs.rs/polytype"
description = "A Hindley-Milner polymorphic typing system."
keywords = ["typing", "language", "type", "inference", "unification"]
categories = ["science", "data-structures", "algorithms"]
edition = "2018"

[features]
default = ["parser"]
parser = ["nom"]

[dependencies]
indexmap = "1.0"
itertools = "0.8"

[dependencies.nom]
version = "=4.1.1"
optional = true

