[package]
name = "polytype"
version = "6.2.1"
authors = ["Lore Anaya Pozo <lore.a.pozo@outlook.com>", "Joshua S. Rule <joshua.s.rule@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/lorepozo/polytype-rs"
homepage = "https://github.com/lorepozo/polytype-rs"
documentation = "https://docs.rs/polytype"
description = "A Hindley-Milner polymorphic typing system."
keywords = ["typing", "language", "type", "inference", "unification"]
categories = ["science", "data-structures", "algorithms"]
edition = "2018"

[features]
default = ["parser"]
parser = []

[dependencies]
indexmap = "1.0"
itertools = "0.8"
winnow = "0.5.28"

